--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -171,7 +171,7 @@
 }
 
 .result-display {
-    -fx-background-color: transparent;
+    -fx-background-color: #e6e6e6;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
     -fx-text-fill: black;
@@ -288,6 +288,7 @@
 
 .dialog-pane {
     -fx-background-color: #e6e6e6;
+    -fx-background-radius: 15;
 }
 
 .dialog-pane > *.button-bar > *.container {
@@ -363,9 +364,8 @@
 }
 
 #resultDisplay .content {
-    -fx-border-color: #3e7b91;
-    -fx-background-color: transparent, white, transparent, white;
-    -fx-background-radius: 0;
+    -fx-border-color: black;
+    -fx-background-color: white;
 }
 
 #products {
@@ -374,12 +374,12 @@
 }
 
 #products .label {
-    -fx-text-fill: black;
+    -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
-    -fx-font-size: 11;
+    -fx-font-size: 13;
 }
 
 .pane-with-header {
@@ -398,4 +398,8 @@
 
 .pane-with-header .list-view {
     -fx-background-color: white;
+}
+
+.table-header {
+    -fx-text-fill: black;
 }
